<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/add_problem_detail_title"
        layout="@layout/title" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/add_problem_detail_title">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <!--问题名称start-->
            <RelativeLayout style="@style/add_problem_layout">

                <TextView
                    style="@style/add_problem_textView"
                    android:text="@string/add_problem_name" />

                <TextView
                    android:id="@+id/add_problem_detail_number"
                    style="@style/add_problem_textView"
                    android:layout_marginRight="5dp"
                    android:layout_toLeftOf="@+id/add_problem_name_right"
                    android:text="@string/add_problem_choose" />

                <ImageView
                    android:id="@+id/add_problem_name_right"
                    android:layout_width="8dp"
                    android:layout_height="10dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@mipmap/right" />
            </RelativeLayout>
            <!--问题名称end-->

            <!--所在位置start-->
            <RelativeLayout style="@style/add_problem_layout">

                <TextView
                    style="@style/add_problem_textView"
                    android:text="@string/add_problem_address" />

                <TextView
                    android:id="@+id/add_problem_detail_address"
                    style="@style/add_problem_textView"
                    android:layout_marginRight="5dp"
                    android:layout_toLeftOf="@+id/add_problem_address_right"
                    android:text="@string/add_problem_fill" />

                <ImageView
                    android:id="@+id/add_problem_address_right"
                    android:layout_width="8dp"
                    android:layout_height="10dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@mipmap/right" />
            </RelativeLayout>
            <!--所在位置end-->

            <!--上报人start-->
            <RelativeLayout style="@style/add_problem_layout">

                <TextView
                    style="@style/add_problem_textView"
                    android:text="@string/add_problem_sender" />

                <TextView
                    android:id="@+id/add_problem_detail_sender"
                    style="@style/add_problem_textView"
                    android:text="张三"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="13dp" />
            </RelativeLayout>
            <!--上报人end-->

            <!--上报时间start-->
            <RelativeLayout style="@style/add_problem_layout">

                <TextView
                    style="@style/add_problem_textView"
                    android:text="@string/add_problem_sendTime" />

                <TextView
                    android:id="@+id/add_problem_detail_sendTime"
                    style="@style/add_problem_textView"
                    android:layout_marginRight="5dp"
                    android:layout_toLeftOf="@+id/add_problem_date_right"
                    android:text="@string/add_problem_choose" />

                <ImageView
                    android:id="@+id/add_problem_date_right"
                    android:layout_width="8dp"
                    android:layout_height="10dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@mipmap/right" />
            </RelativeLayout>
            <!--上报时间end-->


            <!--图片start-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                android:paddingLeft="20dp"
                android:paddingRight="20dp">

                <TextView
                    android:id="@+id/add_problem_detail_photoText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/add_problem_image"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/add_problem_detail_takePhoto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="10dp"
                    android:background="@mipmap/camera" />

                <cn.com.xibeiuniversity.xibeiuniversity.weight.ReportedGridview
                    android:id="@+id/add_problem_detail_gridView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/add_problem_detail_photoText"
                    android:layout_marginTop="15dp"
                    android:horizontalSpacing="3dp"
                    android:numColumns="3"
                    android:scrollbars="none"
                    android:verticalSpacing="10dp" />
            </RelativeLayout>
            <!--图片end-->
            <!--内容区域start-->
            <EditText
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                android:gravity="left|top"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="任务内容  教学楼三楼摁扣坏了请及时修复" />
            <!--内容区域end-->
            <View
                android:layout_width="match_parent"
                android:layout_height="40dp" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/add_problem_detail_button"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/login_button"
        android:text="@string/add_problem_button"
        android:textColor="@color/white"
        android:textSize="16sp" />
</RelativeLayout>