<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <cn.com.xibeiuniversity.xibeiuniversity.weight.MyViewPager
        android:id="@+id/activity_main_viewpager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray" />

    <LinearLayout
        android:id="@+id/bottom_main"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/white"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/main_layout_task"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:descendantFocusability="beforeDescendants"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/main_image_task"
                style="@style/main_image"
                android:src="@mipmap/main_task" />

            <TextView
                android:id="@+id/main_text_task"
                style="@style/main_textView"
                android:text="@string/main_task" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/main_layout_notice"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:descendantFocusability="beforeDescendants"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/main_image_notice"
                style="@style/main_image"
                android:src="@mipmap/main_notice" />

            <TextView
                android:id="@+id/main_text_notice"
                style="@style/main_textView"
                android:text="@string/main_notice" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/main_layout_problem"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:descendantFocusability="beforeDescendants"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/main_image_problem"
                style="@style/main_image"
                android:src="@mipmap/main_problem" />

            <TextView
                android:id="@+id/main_text_problem"
                style="@style/main_textView"
                android:text="@string/main_problem" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/main_layout_statistical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:descendantFocusability="beforeDescendants"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/main_image_statistical"
                style="@style/main_image"
                android:src="@mipmap/main_statistical" />

            <TextView
                android:id="@+id/main_text_statistical"
                style="@style/main_textView"
                android:text="@string/main_statistical" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/main_layout_mine"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:descendantFocusability="beforeDescendants"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/main_image_mine"
                style="@style/main_image"
                android:src="@mipmap/main_mine" />

            <TextView
                android:id="@+id/main_text_mine"
                style="@style/main_textView"
                android:text="@string/main_mine" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
